finished hero-section

--- a/main.scss
+++ b/main.scss
@@ -6,6 +6,7 @@
 @import './scss/components/logo';
 
 @import './scss/layouts/header';
+@import './scss/layouts/hero-section';
 
 
 @import './scss/utils/fonts';
