--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,6 +1,7 @@
 .logo {
     display: flex;
     flex-direction: column;
+    font-family: "Play";
     font-size: 22px;
     font-weight: 700;
     line-height: 0.95;
