--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -13,7 +13,7 @@ ul {
 body {
     background-color: var(--color-primary-light);
     color: var(--color-secondary-dark);
-    font-family: 'Robot', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.15;
