--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,25 +1,27 @@
 .header {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 106px;
-    padding-top: 32px;
-    border: 1px solid black;
+    padding: 32px 0;
     background-color: var(--color-primary-light-transparent);
+    backdrop-filter: blur(4px);
 
     &__container {
         display: flex;
         align-items: center;
-        border: 1px solid grey;
+        gap: 240px;
     }
 
     &__menu {
         display: flex;
+        flex-shrink: 0;
         gap: 56px;
-        flex-grow: 1;
         justify-content: center;
     }
 
     &__menu-link {
-        max-width: fit-content;
+        flex-shrink: 0;
     }
 
     &__menu-link:hover {
@@ -37,4 +39,20 @@
         display: block;
         fill: var(--color-primary-dark);
     }
+
+    &__socials-icon:hover {
+        display: block;
+        fill: var(--color-primary-light);
+    }
+}
+
+.header-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 106px;
+    background-color: var(--color-primary-light);
+    opacity: 25%;
+    filter: blur(10px);
 }
