--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -3,9 +3,13 @@
     top: 0;
     left: 0;
     width: 100%;
-    padding: 32px 0;
+    padding-top: 15px;
     background-color: var(--color-primary-light-transparent);
     backdrop-filter: blur(4px);
+
+    @media screen and (min-width: $bp-desktop) {
+        padding: 32px;
+    }
 
     &__container {
         display: flex;
@@ -19,31 +23,27 @@
         gap: 56px;
         justify-content: center;
     }
+}
 
-    &__menu-link {
-        flex-shrink: 0;
-    }
+&__menu-link:hover {
+    font-weight: 700;
+    color: var(--color-primary-blue);
+    cursor: pointer;
+}
 
-    &__menu-link:hover {
-        font-weight: 700;
-        color: var(--color-primary-blue);
-        cursor: pointer;
-    }
+&__socials {
+    display: flex;
+    gap: 32px;
+}
 
-    &__socials {
-        display: flex;
-        gap: 32px;
-    }
+&__socials-icon {
+    display: block;
+    fill: var(--color-primary-dark);
+}
 
-    &__socials-icon {
-        display: block;
-        fill: var(--color-primary-dark);
-    }
-
-    &__socials-icon:hover {
-        display: block;
-        fill: var(--color-primary-light);
-    }
+&__socials-icon:hover {
+    display: block;
+    fill: var(--color-primary-light);
 }
 
 .header-bg {
