--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -9,3 +9,7 @@
 
     --color-primary-light-transparent: rgba(255, 255, 255, 0.25);
 }
+
+$bp-mobile: 480px;
+$bp-tablet: 768px;
+$bp-desktop: 1280px;
