--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,3 +1,7 @@
+$bp-mobile: 480px;
+$bp-tablet: 768px;
+$bp-desktop: 1280px;
+
 ul {
     list-style-type: none;
     padding: 0;
@@ -50,5 +54,9 @@ img {
     width: 100%;
     max-width: 1240px;
     margin: 0 auto;
-    padding: 0 100px;
+    padding: 0 20px;
+
+    @media screen and (min-width: $bp-desktop) {
+        adding: 0 100px;
+    }
 }
