--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -1,7 +1,7 @@
 .hero-section {
     padding-top: 86px;
     padding-bottom: 20px;
-    background-image: url(../images/hero-section-bg.png);
+    background-image: url(/images/hero-section-bg.png);
     background-repeat: no-repeat;
     background-position: top left;
     background-size: cover;
