--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -57,6 +57,6 @@ img {
     padding: 0 20px;
 
     @media screen and (min-width: $bp-desktop) {
-        adding: 0 100px;
+        padding: 0 100px;
     }
 }
