--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -13,9 +13,7 @@
     }
 
     @media screen and (min-width:$bp-desktop) {
-        padding-top: 125px;
-        padding-bottom: 230px;
-        height: 780px;
+        padding: 125px 0 250px 0;
         background-position-x: 0;
     }
 
