start create advantages section

--- a/scss/layouts/_about-section.scss
+++ b/scss/layouts/_about-section.scss
@@ -1,6 +1,7 @@
 .about-section {
     padding-top: 40px;
     height: 695px;
+    margin-bottom: 177px;
 
     &__container {
         display: flex;
