--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import './components/socials';
 
 @import './layouts/about-section';
+@import './layouts/advantages-section';
 @import './layouts/header';
 @import './layouts/hero-section';
 @import './layouts/mobile-menu';
