--- a/scss/utils/_text.scss
+++ b/scss/utils/_text.scss
@@ -2,3 +2,8 @@
     color: var(--color-primary-blue);
     text-transform: capitalize;
 }
+
+.text-brand--lowercase {
+    color: var(--color-primary-blue);
+    text-transform: lowercase;
+}
