--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -3,17 +3,17 @@
     background-image: url(../images/hero-section-bg.png);
     background-repeat: no-repeat;
     background-position: top left;
-    background-size: cover;
+    background-size: 100%;
     background-position-x: -200px;
 
     @media screen and (min-width:$bp-tablet) {
         padding-top: 100px;
-        padding-bottom: 200px;
         background-position-x: 0;
     }
 
     @media screen and (min-width:$bp-desktop) {
-        padding: 125px 0 250px 0;
+        padding-top: 125px;
+        padding-bottom: 15%;
         background-position-x: 0;
     }
 
