start working with procedured section

--- a/scss/components/_socials.scss
+++ b/scss/components/_socials.scss
@@ -1,9 +1,9 @@
- .socials-icon {
+ .socials {
      display: block;
      fill: var(--color-primary-dark);
  }
 
- .socials-icon:hover {
+ .socials:hover {
      display: block;
      fill: var(--color-primary-light);
  }
