--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -7,4 +7,5 @@
     --color-secondary-grey: #747272;
     --color-secondary-yellow: #FFD02B;
     --color-primary-light-transparent: rgba(255, 255, 255, 0.25);
+    --color-dark-transparent: rgba(0, 0, 0, 0.25);
 }
