--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import './components/buttons';
 @import './components/link';
 @import './components/logo';
+@import './components/procedures-card';
 @import './components/socials';
 
 @import './layouts/about-section';
@@ -12,6 +13,7 @@
 @import './layouts/header';
 @import './layouts/hero-section';
 @import './layouts/mobile-menu';
+@import './layouts/procedures';
 
 
 @import './utils/fonts';
