--- a/scss/utils/_text.scss
+++ b/scss/utils/_text.scss
@@ -7,3 +7,9 @@
     color: var(--color-primary-blue);
     text-transform: lowercase;
 }
+
+.title {
+    font-family: "Play", sans-serif;
+    font-weight: 700;
+    font-size: 64px;
+}
