start working with contacts-section, and modal window

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,9 +10,11 @@
 
 @import './layouts/about-section';
 @import './layouts/advantages-section';
+@import './layouts/contact-section';
 @import './layouts/header';
 @import './layouts/hero-section';
 @import './layouts/mobile-menu';
+@import './layouts/modal';
 @import './layouts/procedures';
 
 
