--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -60,3 +60,12 @@ img {
         padding: 0 100px;
     }
 }
+
+.visually-hidden {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden
+}
