--- a/scss/layouts/_mobile-menu.scss
+++ b/scss/layouts/_mobile-menu.scss
@@ -15,6 +15,7 @@
 
     &__btn-close {
         position: absolute;
+        width: 100%;
         top: 16px;
         right: 24px;
         border: none;
