--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -8,4 +8,5 @@
     --color-secondary-yellow: #FFD02B;
     --color-primary-light-transparent: rgba(255, 255, 255, 0.25);
     --color-dark-transparent: rgba(0, 0, 0, 0.25);
+    --color-secondary-normal-transparent: rgb(0, 31, 74, 0.4);
 }
