done with modal

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -16,7 +16,7 @@ ul {
 
 body {
     background-color: var(--color-primary-light);
-    color: var(--color-secondary-dark);
+    color: var(--color-primary-dark);
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-weight: 400;
