--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -23,9 +23,16 @@
     height: 100%;
     max-width: 724px;
     max-height: 680px;
+    padding: 42px 144px;
     background-color: var(--color-primary-dark);
     background-image: url(../images/modal-bg.png);
     border-radius: 48px;
+
+    &__container {
+        position: absolute;
+        width: 435px;
+        margin: 0 auto;
+    }
 
     &__btn-close {
         position: absolute;
@@ -38,4 +45,44 @@
         cursor: pointer;
     }
 
+    &__title {
+        color: var(--color-primary-light);
+        text-align: center;
+        margin-bottom: 40px;
+    }
+
+    &__text {
+        color: var(--color-primary-light);
+        text-align: center;
+        font-size: 22px;
+        line-height: 1.18;
+        margin-bottom: 32px;
+    }
+
+    &__form-field {
+        margin-bottom: 24px;
+    }
+
+    &__form {
+        max-width: 310px;
+        margin: 0 auto;
+    }
+
+    &__terms {
+        color: var(--color-secondary-grey);
+        font-size: 12px;
+        line-height: 1.5;
+        text-align: center;
+        margin-top: 8px;
+
+        &--link {
+            color: var(--color-secondary-grey);
+            text-decoration: underline;
+        }
+
+    }
+
+    &__button-send {
+        margin: 0 auto;
+    }
 }
