--- a/scss/layouts/_advantages-section.scss
+++ b/scss/layouts/_advantages-section.scss
@@ -30,6 +30,7 @@
         padding: 34px 32px 24px 32px;
         line-height: 1.33;
         box-shadow: 0 4px 4px var(--color-dark-transparent);
+        text-align: center;
     }
 
     &__card-icon {
