--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -74,6 +74,7 @@
         line-height: 1.5;
         text-align: center;
         margin-top: 8px;
+        margin-bottom: 0;
 
         &--link {
             color: var(--color-secondary-grey);
