done with footer

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 @import './layouts/about-section';
 @import './layouts/advantages-section';
 @import './layouts/contact-section';
+@import './layouts/footer';
 @import './layouts/header';
 @import './layouts/hero-section';
 @import './layouts/mobile-menu';
