--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -2,8 +2,12 @@
     display: flex;
     flex-direction: column;
     font-family: "Play";
-    font-size: 22px;
+    font-size: 16px;
     font-weight: 700;
     line-height: 0.95;
     color: var(--color-primary-blue);
+
+    @media screen and (min-width: $bp-desktop) {
+        font-size: 22px;
+    }
 }
