--- a/scss/layouts/_about-section.scss
+++ b/scss/layouts/_about-section.scss
@@ -1,7 +1,11 @@
 .about-section {
-    padding-top: 40px;
-    height: 695px;
-    margin-bottom: 177px;
+    padding-top: 0;
+    height: 365px;
+
+    @media screen and (min-width:$bp-desktop) {
+        padding-top: 40px;
+        height: 695px;
+    }
 
     &__container {
         display: flex;
@@ -15,19 +19,42 @@
 
     &__title {
         max-width: 530px;
-        margin-bottom: 40px;
+        margin-bottom: 24px;
+
+        @media screen and (min-width: $bp-desktop) {
+            margin-bottom: 40px;
+        }
     }
 
     &__text {
-        font-size: 22px;
-        line-height: 1.7;
+        font-size: 18px;
+        line-height: 1.16;
+
+        @media screen and (min-width: $bp-desktop) {
+            font-size: 22px;
+            line-height: 1.7;
+        }
+    }
+
+    &__info-bg-star {
+        position: absolute;
+        right: 22px;
+
+        @media screen and (min-width:$bp-desktop) {
+            display: none;
+        }
     }
 
     &__photo {
-        position: relative;
-        width: 100%;
-        max-width: 500px;
-        height: 655px;
+        display: none;
+
+        @media screen and (min-width:$bp-desktop) {
+            display: block;
+            position: relative;
+            width: 100%;
+            max-width: 500px;
+            height: 655px;
+        }
     }
 
     &__photo-before {
