--- a/scss/layouts/_advantages-section.scss
+++ b/scss/layouts/_advantages-section.scss
@@ -1,30 +1,48 @@
 .advantages-section {
 
+    background-image: url(/images/advantages-bg.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: 30px;
+    padding-top: 190px;
+    padding-bottom: 50px;
+    margin-top: -100px;
+
+    @media screen and (min-width: $bp-desktop) {
+        padding-top: 290px;
+    }
+
     &__container {
         position: relative;
         width: 100%;
-        padding: 0 90px;
-    }
+        padding: 0 22px;
 
-    &__background {
-        position: absolute;
-        max-width: 2022px;
-        top: -250px;
-        left: -460px;
-        z-index: -1;
+        @media screen and (min-width: $bp-desktop) {
+            padding: 0 90px;
+        }
     }
 
     &__title {
         text-align: center;
         margin-bottom: 48px;
+
+        @media screen and (min-width: $bp-desktop) {}
     }
 
     &__cards {
         display: flex;
-        gap: 56px;
+        flex-direction: column;
+        gap: 12px;
+
+        @media screen and (min-width: $bp-desktop) {
+            flex-direction: row;
+            gap: 56px;
+        }
     }
 
     &__card {
+        max-width: 316px;
+        margin: 0 auto;
         background-color: var(--color-primary-light);
         border-radius: 32px;
         padding: 34px 32px 24px 32px;
