--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -1,20 +1,24 @@
 .hero-section {
-    padding: 75px 0;
-    background-image: url(../images/hero-section-bg.png);
+    padding-top: 70px;
+    padding-bottom: 45px;
+    background-image: url(../images/hero-section-mobile-bg.png);
     background-repeat: no-repeat;
-    background-position: top left;
     background-size: 100%;
-    background-position-x: -200px;
 
     @media screen and (min-width:$bp-tablet) {
+        background-image: url(../images/hero-section-bg.png);
         padding-top: 100px;
-        background-position-x: 0;
+        background-size: 100%;
+        background-position-x: center;
     }
 
     @media screen and (min-width:$bp-desktop) {
+        background-image: url(../images/hero-section-bg.png);
+        height: 655px;
         padding-top: 125px;
-        padding-bottom: 15%;
         background-position-x: 0;
+        background-position-y: top;
+        background-size: 100%;
     }
 
     &__container {
@@ -27,6 +31,7 @@
     &__primary-text {
         text-align: center;
         font-size: 12px;
+        line-height: 1.5;
         margin-bottom: 0;
 
         @media screen and (min-width:$bp-desktop) {
@@ -45,7 +50,7 @@
         font-family: "Play";
         font-size: 54px;
         font-weight: bold;
-        line-height: 0.8;
+        line-height: 0.85;
         justify-content: center;
         gap: 10px;
 
@@ -68,7 +73,7 @@
 
     &__text {
         font-size: 11px;
-        line-height: 1.6;
+        line-height: 1.63;
         text-align: center;
 
         @media screen and (min-width:$bp-desktop) {
