--- a/scss/layouts/_procedures.scss
+++ b/scss/layouts/_procedures.scss
@@ -2,11 +2,21 @@
 
     &__container {
         margin-top: 96px;
-        overflow: hidden;
     }
 
     &__title {
         text-align: center;
     }
 
+}
+
+.procedures {
+    &__button {
+        margin: auto 16px;
+        width: 44px;
+        height: 44px;
+        border: 1px solid var(--color-primary-dark);
+        background-color: transparent;
+        border-radius: 50%;
+    }
 }
