--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import './components/input';
 @import './components/link';
 @import './components/logo';
+@import './components/pagination';
 @import './components/procedures-card';
 @import './components/socials';
 
