--- a/scss/components/_pagination.scss
+++ b/scss/components/_pagination.scss
@@ -1,16 +1,26 @@
 .pagination {
     display: flex;
     align-items: center;
-    gap: 24px;
+    gap: 16px;
     justify-content: center;
-    margin-top: 32px;
+    margin-top: 16px;
+
+    @media screen and (min-width:$bp-desktop) {
+        gap: 24px;
+        margin-top: 32px;
+    }
 
     &__button {
         background-color: var(--color-secondary-grey);
-        width: 12px;
-        height: 12px;
+        width: 8px;
+        height: 8px;
         border-radius: 50%;
         padding: 0;
+
+        @media screen and (min-width:$bp-desktop) {
+            width: 12px;
+            height: 12px;
+        }
 
         &--active {
             background-color: var(--color-primary-blue);
