--- a/scss/layouts/_contact-section.scss
+++ b/scss/layouts/_contact-section.scss
@@ -2,7 +2,11 @@
     margin-top: 96px;
 
     &__container {
-        padding-left: 64px;
+        padding-left: 0;
+
+        @media screen and (min-width:$bp-desktop) {
+            padding-left: 64px;
+        }
     }
 
     &__title {
@@ -11,22 +15,44 @@
 
     &__block {
         display: flex;
-        gap: 32px;
+        flex-direction: column-reverse;
+        gap: 24px;
 
+        @media screen and (min-width:$bp-desktop) {
+            flex-direction: row;
+            gap: 32px;
+        }
     }
 
     &__map {
-        width: 604px;
-        height: 480px;
-        border-radius: 32px;
+        flex-shrink: 0;
+        border-radius: 0;
+        height: 232px;
+        margin: 0 -24px;
+
+        @media screen and (min-width:$bp-desktop) {
+            width: 605px;
+            position: relative;
+            height: auto;
+            margin: 0;
+            border-radius: 32px;
+        }
     }
 
     &__form-block {
+        min-width: 320px;
+        max-height: 480px;
+        margin: 0 auto;
+        padding: 48px 56px;
         background-color: var(--color-primary-dark);
         background-image: url(/images/contacts-form-bg.png);
         border-radius: 32px;
-        padding: 48px 56px;
-        max-height: 480px;
+
+        @media screen and (min-width:$bp-desktop) {
+            min-width: 424px;
+            margin: 0;
+        }
+
     }
 
     &__form-field {
