--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -21,28 +21,43 @@
     position: relative;
     width: 100%;
     height: 100%;
-    max-width: 724px;
-    max-height: 680px;
-    padding: 42px 144px;
+    max-width: 320px;
+    max-height: 424px;
+    padding: 24px 42px;
     background-color: var(--color-primary-dark);
     background-image: url(../images/modal-bg.png);
     border-radius: 48px;
 
+    @media screen and (min-width:$bp-desktop) {
+        max-width: 724px;
+        max-height: 680px;
+        padding: 42px 144px;
+    }
+
     &__container {
         position: absolute;
-        width: 435px;
+        width: 192px;
         margin: 0 auto;
+
+        @media screen and (min-width:$bp-desktop) {
+            width: 436px;
+        }
     }
 
     &__btn-close {
         position: absolute;
-        top: 42px;
-        right: 42px;
+        top: 17px;
+        right: 21px;
         background: transparent;
         border: none;
         fill: var(--color-primary-light);
         padding: 0;
         cursor: pointer;
+
+        @media screen and (min-width:$bp-desktop) {
+            top: 42px;
+            right: 42px;
+        }
     }
 
     &__title {
