--- a/scss/layouts/_procedures.scss
+++ b/scss/layouts/_procedures.scss
@@ -1,6 +1,5 @@
 .procedures-section {
 
-
     &__container {
         display: flex;
         gap: 32px;
@@ -15,12 +14,21 @@
 
 .procedures {
     &__button {
+        display: none;
         margin: auto 16px;
         width: 44px;
         height: 44px;
         border: 1px solid var(--color-primary-dark);
         background-color: transparent;
         border-radius: 50%;
+
+        @media screen and (min-width:$bp-tablet) {
+            display: block;
+        }
+
+        @media screen and (min-width:$bp-desktop) {
+            display: block;
+        }
     }
 
 
