--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 
 
 @import './components/buttons';
+@import './components/icon-close';
 @import './components/input';
 @import './components/link';
 @import './components/logo';
