--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,7 +19,7 @@
 @import './layouts/hero-section';
 @import './layouts/mobile-menu';
 @import './layouts/modal';
-@import './layouts/procedures';
+@import './layouts/procedures-section';
 
 
 @import './utils/fonts';
