--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,15 +1,18 @@
 .button {
     display: block;
-    padding: 16px 32px;
+    padding: 12px 24px;
     font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    line-height: 1.18;
     color: var(--color-primary-light);
     font-weight: 700;
     background-color: var(--color-primary-blue);
-    border: 2px solid var(--color-primary-blue);
+    border: none;
     border-radius: 32px;
     cursor: pointer;
 
     @media screen and (min-width:$bp-desktop) {
+        padding: 16px 32px;
         font-size: 18px;
     }
 }
