--- a/scss/components/_input.scss
+++ b/scss/components/_input.scss
@@ -1,11 +1,18 @@
 input {
     width: 100%;
-    padding: 18px 33px;
-    border-radius: 32px;
-    background: transparent;
+    padding: 16px 24px;
+    margin: 0 auto;
     border: 2px solid var(--color-secondary-grey);
     font-size: 13px;
     font-family: "Roboto", sans-serif;
+    border-radius: 32px;
+    background: transparent;
+
+
+    @media screen and (min-width:$bp-desktop) {
+        padding: 18px 33px;
+        margin: 0;
+    }
 }
 
 .input {
