--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -22,22 +22,22 @@
     width: 100%;
     height: 100%;
     max-width: 320px;
-    max-height: 424px;
-    padding: 24px 42px;
+    max-height: 434px;
+    padding: 42px 24px;
     background-color: var(--color-primary-dark);
     background-image: url(../images/modal-bg.png);
-    border-radius: 48px;
+    border-radius: 24px;
 
     @media screen and (min-width:$bp-desktop) {
         max-width: 724px;
         max-height: 680px;
         padding: 42px 144px;
+        border-radius: 48px;
     }
 
     &__container {
-        position: absolute;
-        width: 192px;
         margin: 0 auto;
+        width: 272px;
 
         @media screen and (min-width:$bp-desktop) {
             width: 436px;
@@ -61,9 +61,15 @@
     }
 
     &__title {
+        display: none;
         color: var(--color-primary-light);
         text-align: center;
-        margin-bottom: 40px;
+        margin-bottom: 24px;
+
+        @media screen and (min-width:$bp-desktop) {
+            display: block;
+            margin-bottom: 40px;
+        }
     }
 
     &__text {
@@ -71,16 +77,27 @@
         text-align: center;
         font-size: 22px;
         line-height: 1.18;
-        margin-bottom: 32px;
+        margin-bottom: 24px;
+
+        @media screen and (min-width:$bp-desktop) {
+            margin-bottom: 32px;
+        }
     }
 
     &__form-field {
-        margin-bottom: 24px;
+        margin-bottom: 16px;
+
+        @media screen and (min-width:$bp-desktop) {
+            margin-bottom: 24px;
+        }
     }
 
     &__form {
-        max-width: 310px;
         margin: 0 auto;
+
+        @media screen and (min-width:$bp-desktop) {
+            max-width: 310px;
+        }
     }
 
     &__terms {
