fix bg hero-section

--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -16,9 +16,9 @@
         background-image: url(../images/hero-section-bg.png);
         height: 655px;
         padding-top: 125px;
-        background-position-x: 0;
+        background-position-x: right;
         background-position-y: top;
-        background-size: 100%;
+        background-size: 80%;
     }
 
     &__container {
