--- a/scss/layouts/_advantages-section.scss
+++ b/scss/layouts/_advantages-section.scss
@@ -1,6 +1,6 @@
 .advantages-section {
 
-    background-image: url(/images/advantages-bg.png);
+    background-image: url(../images/advantages-bg.png);
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: 30px;
