--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -7,7 +7,7 @@
     color: var(--color-primary-light);
     font-weight: 700;
     background-color: var(--color-primary-blue);
-    border: none;
+    border: 2px solid var(--color-primary-blue);
     border-radius: 32px;
     cursor: pointer;
 
